# template-async-fastapi

./: .gitignore  README.md  pyproject.toml
fastapi_clean/: database.py
fastapi_clean/models/: __init__.py  artist_model.py  base_model.py  song_model.py
fastapi_clean_architecture/: database.py  main.py
template_async_fastapi/: database.py  main.py
template_async_fastapi/models/: __init__.py  artist_model.py  song_model.py
template_async_fastapi/repositories/: __init__.py  artist_repository.py  base_repository.py  song_repository.py
template_async_fastapi/schemas/: artist_schema.py  song_schema.py
template_async_fastapi/services/: __init__.py  artist_service.py  base_service.py  song_service.py
